SERVER-28531 Fix convert-to-capped to use new UUID.